package app.domain.model;

public class Arrive {
  public String getTime() {
    return "12:00";
  }
}
